--- a/website/css/gallery.css
+++ b/website/css/gallery.css
@@ -1,13 +1,19 @@
 #slideshow {list-style:none; color:#fff}
 #slideshow span {display:none}
-#wrapper {width:420; margin:0px auto; display:none}
+#wrapper {width:420; margin:0px auto; display:none;overflow:hidden;}
 #wrapper * {margin:0px; padding:0px}
 #fullsize {position:relative; width:425px; height:315px; padding:0px; border:0px solid #ccc; background:#000}
 #information {position:absolute; bottom:0px; width:425px; height:0; background:#000; color:#fff; overflow:hidden; z-index:200; opacity:.7; filter:alpha(opacity=70)}
 #information h3 {padding:4px 8px 3px; font-size:14px}
 #information p {padding:0 8px 8px}
-#image {width:415px;height:315px;overflow:hidden}
-#image img {position:absolute; z-index:25; width:auto}
+#image {width:414px;height:314px;overflow:hidden;}
+#image img {
+position:absolute;
+left:0px;
+top:0px;
+z-index:25;
+width:auto
+}
 .imgnav {position:absolute; width:25%; height:306px; cursor:pointer; z-index:150}
 #imgprev {left:0; background:url(http://d12dnsmfbcrswq.cloudfront.net/rsrc/images/left.gif) left center no-repeat}
 #imgnext {right:0; background:url(http://d12dnsmfbcrswq.cloudfront.net/rsrc/images/right.gif) right center no-repeat}
